--- a/admin/package.json
+++ b/admin/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -16,15 +18,20 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@popperjs/core": "^2.11.8",
+    "@types/jquery": "^3.5.32",
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
+    "datatables.net-bs5": "^2.3.2",
     "geist": "^1.4.2",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.58.1",
+    "react-router-dom": "^7.6.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -32,6 +39,7 @@
     "@types/node": "^20.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yup": "^0.29.14",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "typescript": "^5"
