--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "seed:admin": "ts-node src/database/seeders/create-super-admin.ts"
   },
   "dependencies": {
+    "@coinbase/coinbase-sdk": "^0.25.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -30,17 +31,30 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.3",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/moment": "^2.11.29",
+    "@types/paypal-rest-sdk": "^1.7.9",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "mongoose": "^8.15.1",
+    "cookie-parser": "^1.4.7",
+    "currency.js": "^2.0.4",
+    "moment": "^2.30.1",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.8.1",
+    "razorpay": "^2.9.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "stripe": "^18.2.1",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -53,6 +67,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/mongodb": "^4.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
