--- a/api/package.json
+++ b/api/package.json
@@ -25,16 +25,20 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.3",
+    "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/moment": "^2.11.29",
+    "@types/nodemailer": "^6.4.17",
     "@types/paypal-rest-sdk": "^1.7.9",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
@@ -42,9 +46,12 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "currency.js": "^2.0.4",
+    "firebase-admin": "^13.4.0",
     "moment": "^2.30.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
+    "nestjs-i18n": "^10.5.1",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -52,6 +59,7 @@
     "razorpay": "^2.9.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^18.2.1",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
